--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ compiler:
   - gcc
 
 before_script:
+  - env | grep -i travis
   - sudo add-apt-repository -y ppa:as-bahanta/raqm              # USED! libraqm-dev, libfribidi0, harfbuzz
   #- sudo add-apt-repository -y ppa:dns/gnu                     # UN-used
   - sudo add-apt-repository -y ppa:aacid/openjp2trusty          # USED! libopenjp2-7
@@ -49,7 +50,8 @@ script:
   - mkdir -p appdir/usr/share/applications/ ; cp ./appimage/imagemagick.desktop ./appdir/usr/share/applications/
   - mkdir -p appdir/usr/share/icons/hicolor/512x512/apps/ ; cp ./appimage/imagemagick.png  ./appdir/usr/share/icons/hicolor/512x512/apps/
   - mkdir -p appdir/usr/share/metainfo/ ; cp ./appimage/imagemagick.appdata.xml  ./appdir/usr/share/metainfo/
-  - appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml
+  - echo "$(appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml)"
+  - appstreamcli --version
   #- ls -l appdir
   #- readlink -f appdir
   - make install DESTDIR=$(readlink -f appdir)
@@ -97,6 +99,7 @@ script:
   - curl --upload-file ./ImageMagick-continuous-x86_64.AppImage                      https://transfer.sh/ImageMagick-continuous-x86_64.AppImage
   - #; fi
   - find . -name "ImageMagick-*.AppImage*"
+  - env | grep -i travis
 
 after_success:
   #- Do nothing for now
