--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_script:
   #- sudo add-apt-repository -y ppa:voxops/backports            # 
   #- sudo add-apt-repository -y ppa:dsci-admins/live            # 
   - sudo add-apt-repository -y ppa:ximion/packagekit            # USED! libglib, appstream #Huh? Travis says 'appstream' has no insta candidate
+  - sudo add-apt-repository -y ppa:strukturag/libde265          # libde265
   - sudo apt-key update -q
   - sudo apt-get update -q
   - sudo apt-get install --only-upgrade autoconf
