--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,10 @@ script:
   - mkdir -p appdir/usr/share/icons/hicolor/512x512/apps/ ; cp ./appimage/imagemagick.png  ./appdir/usr/share/icons/hicolor/512x512/apps/
   - mkdir -p appdir/usr/share/metainfo/ ; cp ./appimage/imagemagick.appdata.xml  ./appdir/usr/share/metainfo/
   - echo "$(appstreamcli --version)"
-  - echo "$(appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml)"
+  - export _appstreamcli="$(appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml 2>&1)"
+  - echo "$_appstreamcli"
+  - echo "$(appstreamcli validate --verbose ./appimage/imagemagick.appdata.xml >/dev/null) dollar_questionmark=$?"
+
   #- ls -l appdir
   #- readlink -f appdir
   - make install DESTDIR=$(readlink -f appdir)
