--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ compiler:
 
 before_script:
   - env | grep -i travis
+  - cat /etc/os-release
   - sudo add-apt-repository -y ppa:as-bahanta/raqm              # USED! libraqm-dev, libfribidi0, harfbuzz
   #- sudo add-apt-repository -y ppa:dns/gnu                     # UN-used
   - sudo add-apt-repository -y ppa:aacid/openjp2trusty          # USED! libopenjp2-7
