--- a/.travis.yml
+++ b/.travis.yml
@@ -104,10 +104,20 @@ script:
   - ls -l *.AppImage.zsync
   - wget -c https://github.com/probonopd/uploadtool/raw/master/upload.sh
   - echo '# AppImage Build Logging Info'                                                                         > AppImage-Buildinfo-Travis-Job-$TRAVIS_JOB_NUMBER.md
+  - ls -l AppImage-Buildinfo-Travis-Job*
+  - cat AppImage-Buildinfo-Travis-Job*
   - echo ""                                                                                                     >> AppImage-Buildinfo-Travis-Job-$TRAVIS_JOB_NUMBER.md
+  - ls -l AppImage-Buildinfo-Travis-Job*
+  - cat AppImage-Buildinfo-Travis-Job*
   - echo Travis AppImage Build Log URL: https://travis-ci.org/KurtPfeifle/ImageMagick/builds/$TRAVIS_BUILD_ID   >> AppImage-Buildinfo-Travis-Job-$TRAVIS_JOB_NUMBER.md
+  - ls -l AppImage-Buildinfo-Travis-Job*
+  - cat AppImage-Buildinfo-Travis-Job*
   - echo ""                                                                                                     >> AppImage-Buildinfo-Travis-Job-$TRAVIS_JOB_NUMBER.md
+  - ls -l AppImage-Buildinfo-Travis-Job*
+  - cat AppImage-Buildinfo-Travis-Job*
   - echo Travis AppImage Build Log 'raw' Text: https://api.travis-ci.org/v3/job/$TRAVIS_BUILD_ID/log.txt        >> AppImage-Buildinfo-Travis-Job-$TRAVIS_JOB_NUMBER.md
+  - ls -l AppImage-Buildinfo-Travis-Job*
+  - cat AppImage-Buildinfo-Travis-Job*
   ####- bash upload.sh ImageMagick-continuous-x86_64.AppImage
   #- bash upload.sh ImageMagick-continuous-x86_64.AppImage.sha512
   ####- bash upload.sh ImageMagick-latest-${IMVERSION}.AppImage
